@@ -2,6 +2,7 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Fixed some BMP images loading bugs (STR #825)
 	- Fl_File_Chooser now returns directory names with a
 	  trailing slash to avoid problems with relative
 	  filenames (STR #819)
